# gallery3-sharing-plugin

./: COPYING  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure.ac
data/: Makefile.am  gallery3.service.xml.in
debian/: changelog  control
src/: Makefile.am  Makefile.in  common.c  common.h  plugin.c  send.c  send.h  update.c  update.h  validate.c  validate.h
